==> arcoslab/paparazzi/sw/airborne/arch/stm32/mcu_periph/adc_arch.c <==
#include "mcu_periph/adc.h"
#include <libopencm3/stm32/rcc.h>
#include <libopencm3/stm32/gpio.h>
#include <libopencm3/stm32/f1/adc.h>
#define ADC_SAMPLE_TIME ADC_SMPR_SMP_41DOT5CYC
#include <libopencm3/stm32/f3/adc.h> // no se porque utilizan 41.5 o 56 ciclos!!!
#define ADC_SAMPLE_TIME ADC_SMPR1_SMP_61DOT5CYC
#include <libopencm3/stm32/f4/adc.h>
#define ADC_SAMPLE_TIME ADC_SMPR_SMP_56CYC
#include <libopencm3/cm3/nvic.h>
#include <libopencm3/stm32/timer.h>
#include <string.h>
#include "std.h"
#include "led.h"
#include BOARD_CONFIG
#define ADC1_GPIO_INIT() {                      \
	gpio_set_mode(GPIOB, GPIO_MODE_INPUT,       \
                  GPIO_CNF_INPUT_ANALOG,		\
                  GPIO1 |	GPIO0);             \
	gpio_set_mode(GPIOC, GPIO_MODE_INPUT,       \
                  GPIO_CNF_INPUT_ANALOG,		\
                  GPIO5 |	GPIO3);             \
  }
#define ADC2_GPIO_INIT() {                      \
    gpio_set_mode(GPIOB, GPIO_MODE_INPUT,       \
                  GPIO_CNF_INPUT_ANALOG,		\
                  GPIO1 | GPIO0);               \
    gpio_set_mode(GPIOC, GPIO_MODE_INPUT,       \
                  GPIO_CNF_INPUT_ANALOG,		\
                  GPIO5 | GPIO3);               \
  }

static inline void adc_init_rcc( void )
{
#if defined (USE_AD1) || defined (USE_AD2)
  uint32_t timer;
  volatile uint32_t *rcc_apbenr;
  uint32_t rcc_apb;
#if defined(USE_AD_TIM4)
  timer   = TIM4;
  rcc_apbenr = &RCC_APB1ENR;
  rcc_apb = RCC_APB1ENR_TIM4EN;
#elif defined(USE_AD_TIM1)
  timer   = TIM1;
  rcc_apbenr = &RCC_APB2ENR;
  rcc_apb = RCC_APB2ENR_TIM1EN;
#else
  timer   = TIM2;
  rcc_apbenr = &RCC_APB1ENR;
  rcc_apb = RCC_APB1ENR_TIM2EN;
#endif

  /*
   * Historic Note:
   * Previously in libstm32 we were setting the ADC clock here.
   * It was being set to PCLK2 DIV2 resulting in 36MHz clock on the ADC. I am
   * pretty sure that this is wrong as based on the datasheet the ADC clock
   * must not exceed 14MHz! Now the clock is being set by the clock init
   * routine in libopencm3 so we don't have to set up this clock ourselves any
   * more. This comment is here just as a reminder and may be removed in the
   * future when we know that everything is working properly.
   * (by Esden the historian :D)
   */

  /* Timer peripheral clock enable. */
  rcc_peripheral_enable_clock(rcc_apbenr, rcc_apb);
  /* GPIO peripheral clock enable. */
#if defined(STM32F1)
  rcc_peripheral_enable_clock(&RCC_APB2ENR, RCC_APB2ENR_IOPBEN |
                              RCC_APB2ENR_IOPCEN);
#elif defined(STM32F3)
  rcc_peripheral_enable_clock(&RCC_AHBENR, RCC_AHBENR_IOPBEN |
														RCC_AHBENR_IOPCEN);
  adc_set_clk_prescale(RCC_CFGR2_ADC12PRES_PLL_CLK_DIV_2);
#elif defined(STM32F4)
  rcc_peripheral_enable_clock(&RCC_AHB1ENR, ADC_GPIO_CLOCK_PORT);
  adc_set_clk_prescale(ADC_CCR_ADCPRE_BY2);
#endif

  /* Enable ADC peripheral clocks. */
#ifdef USE_AD1
#if defined(STM32F3)
  rcc_peripheral_enable_clock(&RCC_AHBENR, RCC_AHBENR_ADC12EN);// es un mismo registro para el adc1 y el adc2
#else 
  rcc_peripheral_enable_clock(&RCC_APB2ENR, RCC_APB2ENR_ADC1EN);
#endif
#endif
#ifdef USE_AD2
#if defined(STM32F3)
  rcc_peripheral_enable_clock(&RCC_AHBENR, RCC_AHBENR_ADC12EN);// es un mismo registro para el adc1 y el adc2
#else
  rcc_peripheral_enable_clock(&RCC_APB2ENR, RCC_APB2ENR_ADC2EN);
#endif
#endif

  /* Time Base configuration */
  timer_reset(timer);
  timer_set_mode(timer, TIM_CR1_CKD_CK_INT,
                 TIM_CR1_CMS_EDGE, TIM_CR1_DIR_UP);
#if defined(STM32F1)
  timer_set_period(timer, 0xFF);
  timer_set_prescaler(timer, 0x8);
#elif defined(STM32F3)
  timer_set_period(timer, 0xFFFF); //CAMBIAR ESTOS VALORES NO SE DE DONDE LOS ELIGEN
  timer_set_prescaler(timer, 0x53);
#elif defined(STM32F4)
  timer_set_period(timer, 0xFFFF);
  timer_set_prescaler(timer, 0x53);
#endif
  //timer_set_clock_division(timer, 0x0);
  /* Generate TRGO on every update. */
  timer_set_master_mode(timer, TIM_CR2_MMS_UPDATE);
  timer_enable_counter(timer);

#endif // defined (USE_AD1) || defined (USE_AD2)
}

static inline void adc_init_irq( void )
{
#if defined(STM32F1)
  nvic_set_priority(NVIC_ADC1_2_IRQ, 0);
  nvic_enable_irq(NVIC_ADC1_2_IRQ);
#elif defined(STM32F3)
  nvic_set_priority(NVIC_ADC1_2_IRQ, 0); 
  nvic_enable_irq(NVIC_ADC1_2_IRQ);
#elif defined(STM32F4)
  nvic_set_priority(NVIC_ADC_IRQ, 0);
  nvic_enable_irq(NVIC_ADC_IRQ);
#endif
}

static inline void adc_init_single(uint32_t adc,
                                   uint8_t chan1, uint8_t chan2,
                                   uint8_t chan3, uint8_t chan4)
{
  uint8_t num_channels, rank;
  uint8_t channels[4];

  // Paranoia, must be down for 2+ ADC clock cycles before calibration
  adc_off(adc);

  /* enable adc clock */
  if (adc == ADC1) {
#ifdef USE_AD1
    num_channels = NB_ADC1_CHANNELS;
    ADC1_GPIO_INIT();
#endif
  }
  else if (adc == ADC2) {
#ifdef USE_AD2
    num_channels = NB_ADC2_CHANNELS;
    ADC2_GPIO_INIT();
#endif
  }

  /* Configure ADC */

  /* Explicitly setting most registers, reset/default values are correct for most */

  /* Set CR1 register. */

  /* Clear AWDEN */
  adc_disable_analog_watchdog_regular(adc);
  /* Clear JAWDEN */
  adc_disable_analog_watchdog_injected(adc);
  /* Clear DISCEN */
  adc_disable_discontinuous_mode_regular(adc);
  /* Clear JDISCEN */
  adc_disable_discontinuous_mode_injected(adc);
  /* Clear JAUTO */
  adc_disable_automatic_injected_group_conversion(adc);
  /* Enable ADC<X> JEOC interrupt (Set JEOCIE) */
  adc_enable_eoc_interrupt_injected(adc);
#if !defined(STM32F3)  
  /* Set SCAN */
  adc_enable_scan_mode(adc); //revisar un poco más (libopencm3).
  /* Clear AWDIE */
#endif
  adc_disable_awd_interrupt(adc);
#if defined(STM32F3)
/* Clear AWDIE */
  adc_disable_all_awd_interrupt(adc);
#endif
  /* Clear EOCIE */
  adc_disable_eoc_interrupt(adc);

  /* Set CR2 register. */

  /* Clear TSVREFE */
#if defined(STM32F1)
  adc_disable_temperature_sensor(adc);
#elif defined(STM32F3)
  adc_disable_temperature_sensor();
#elif defined(STM32F4)
  adc_disable_temperature_sensor();
#endif
  /* Clear EXTTRIG */
  adc_disable_external_trigger_regular(adc);
  /* Clear ALIGN */
  adc_set_right_aligned(adc);
  /* Clear DMA */
  adc_disable_dma(adc);
  /* Clear CONT */
  adc_set_single_conversion_mode(adc);

  rank = 3;
  if (chan1) {
#ifdef STM32F3
    adc_set_sample_time(adc, adc_channel_map[0], ADC_SMPR1_SMP_61DOT5CYC);
    channels[rank] = adc_channel_map[0];
    rank--;
#else
    adc_set_sample_time(adc, adc_channel_map[0], ADC_SAMPLE_TIME);
    channels[rank] = adc_channel_map[0];
    rank--;
#endif
  }
  if (chan2) {
#ifdef STM32F3
    adc_set_sample_time(adc, adc_channel_map[1], ADC_SMPR1_SMP_61DOT5CYC);
    channels[rank] = adc_channel_map[1];
    rank--;
#else
    adc_set_sample_time(adc, adc_channel_map[1], ADC_SAMPLE_TIME);
    channels[rank] = adc_channel_map[1];
    rank--;
#endif
  }
  if (chan3) {
#ifdef STM32F3
    adc_set_sample_time(adc, adc_channel_map[2], ADC_SMPR1_SMP_61DOT5CYC);
    channels[rank] = adc_channel_map[2];
    rank--;
#else
    adc_set_sample_time(adc, adc_channel_map[2], ADC_SAMPLE_TIME);
    channels[rank] = adc_channel_map[2];
    rank--;
#endif
  }
  if (chan4) {
#ifdef STM32F3
    adc_set_sample_time(adc, adc_channel_map[3], ADC_SMPR1_SMP_61DOT5CYC);
    channels[rank] = adc_channel_map[3];
#else
    adc_set_sample_time(adc, adc_channel_map[3], ADC_SAMPLE_TIME);
    channels[rank] = adc_channel_map[3];
#endif
  }

  adc_set_injected_sequence(adc, num_channels, channels);

#if USE_AD_TIM4
PRINT_CONFIG_MSG("Info: Using TIM4 for ADC")
#if defined(STM32F1)
  adc_enable_external_trigger_injected(adc, ADC_CR2_JEXTSEL_TIM4_TRGO);
#elif defined(STM32F3)
  adc_enable_external_trigger_injected(adc, ADC_JSQR_JEXTSEL_EVENT_5, ADC_JSQR_JEXTEN_BOTH_EDGES);//pag 221 
#elif defined(STM32F4)
  adc_enable_external_trigger_injected(adc, ADC_CR2_JEXTSEL_TIM4_TRGO, ADC_CR2_JEXTEN_BOTH_EDGES);
#endif
#elif USE_AD_TIM1
PRINT_CONFIG_MSG("Info: Using TIM1 for ADC")
#if defined(STM32F1)
  adc_enable_external_trigger_injected(adc, ADC_CR2_JEXTSEL_TIM1_TRGO);
#elif defined(STM32F3)
  adc_enable_external_trigger_injected(adc, ADC_JSQR_JEXTSEL_EVENT_0, ADC_JSQR_JEXTEN_BOTH_EDGES);
#elif defined(STM32F4)
  adc_enable_external_trigger_injected(adc, ADC_CR2_JEXTSEL_TIM1_TRGO, ADC_CR2_JEXTEN_BOTH_EDGES);
#endif
#else
PRINT_CONFIG_MSG("Info: Using default TIM2 for ADC")
#if defined(STM32F1)
  adc_enable_external_trigger_injected(adc, ADC_CR2_JEXTSEL_TIM2_TRGO);
#elif defined(STM32F3)
  adc_enable_external_trigger_injected(adc, ADC_JSQR_JEXTSEL_EVENT_2, ADC_JSQR_JEXTEN_BOTH_EDGES);
#elif defined(STM32F4)
  adc_enable_external_trigger_injected(adc, ADC_CR2_JEXTSEL_TIM2_TRGO, ADC_CR2_JEXTEN_BOTH_EDGES);
#endif
#endif

  /* Enable ADC<X> */
  adc_power_on(adc);
#if defined(STM32F1)
  /* Enable ADC<X> reset calibaration register */
  adc_reset_calibration(adc);
  /* Check the end of ADC<X> reset calibration */
  while ((ADC_CR2(adc) & ADC_CR2_RSTCAL) != 0);
  /* Start ADC<X> calibaration */
  adc_calibration(adc);
  /* Check the end of ADC<X> calibration */
  while ((ADC_CR2(adc) & ADC_CR2_CAL) != 0);
#endif
}

void adc_init( void ) {

  /* initialize buffer pointers with 0 (not set).
     buffer null pointers will be ignored in interrupt
     handler, which is important as there are no
     buffers registered at the time the ADC trigger
     interrupt is enabled.
  */
  uint8_t channel;
#ifdef USE_AD1
  for(channel = 0; channel < NB_ADC1_CHANNELS; channel++)
    adc1_buffers[channel] = NULL;
  volatile uint32_t* tmp_channels_1[] = {
    &ADC_JDR1(ADC1),
    &ADC_JDR2(ADC1),
    &ADC_JDR3(ADC1),
    &ADC_JDR4(ADC1)
  };
#ifdef USE_AD1_1
  adc_injected_channels[ADC1_C1] = tmp_channels_1[NB_ADC1_CHANNELS-1-ADC1_C1];
#endif
#ifdef USE_AD1_2
  adc_injected_channels[ADC1_C2] = tmp_channels_1[NB_ADC1_CHANNELS-1-ADC1_C2];
#endif
#ifdef USE_AD1_3
  adc_injected_channels[ADC1_C3] = tmp_channels_1[NB_ADC1_CHANNELS-1-ADC1_C3];
#endif
#ifdef USE_AD1_4
  adc_injected_channels[ADC1_C4] = tmp_channels_1[NB_ADC1_CHANNELS-1-ADC1_C4];
#endif

#endif // USE_AD1

#ifdef USE_AD2
  for(channel = 0; channel < NB_ADC2_CHANNELS; channel++)
    adc2_buffers[channel] = NULL;
  volatile uint32_t* tmp_channels_2[] = {
    &ADC_JDR1(ADC2),
    &ADC_JDR2(ADC2),
    &ADC_JDR3(ADC2),
    &ADC_JDR4(ADC2)
  };
#ifdef USE_AD2_1
  adc_injected_channels[ADC2_C1] = tmp_channels_2[NB_ADC2_CHANNELS-1-ADC2_C1];
#endif
#ifdef USE_AD2_2
  adc_injected_channels[ADC2_C2] = tmp_channels_2[NB_ADC2_CHANNELS-1-ADC2_C2];
#endif
#ifdef USE_AD2_3
  adc_injected_channels[ADC2_C3] = tmp_channels_2[NB_ADC2_CHANNELS-1-ADC2_C3];
#endif
#ifdef USE_AD2_4
  adc_injected_channels[ADC2_C4] = tmp_channels_2[NB_ADC2_CHANNELS-1-ADC2_C4];
#endif

#endif // USE_AD2

  adc_new_data_trigger = FALSE;
  adc_channel_map[0] = BOARD_ADC_CHANNEL_1;
  adc_channel_map[1] = BOARD_ADC_CHANNEL_2;
  adc_channel_map[2] = BOARD_ADC_CHANNEL_3;
  adc_channel_map[3] = BOARD_ADC_CHANNEL_4;

  adc_init_rcc();
  adc_init_irq();

  // adc_init_single(ADCx, c1, c2, c3, c4)
#ifdef USE_AD1
  adc_init_single(ADC1,
#ifdef USE_AD1_1
                  1,
#else
                  0,
#endif
#ifdef USE_AD1_2
                  1,
#else
                  0,
#endif
#ifdef USE_AD1_3
                  1,
#else
                  0,
#endif
#ifdef USE_AD1_4
                  1
#else
                  0
#endif
                  );
#endif // USE_AD1

#ifdef USE_AD2
  adc_init_single(ADC2,
#ifdef USE_AD2_1
                  1,
#else
                  0,
#endif
#ifdef USE_AD2_2
                  1,
#else
                  0,
#endif
#ifdef USE_AD2_3
                  1,
#else
                  0,
#endif
#ifdef USE_AD2_4
                  1
#else
                  0
#endif
                  );
#endif // USE_AD2

}
